--- a/docstrings/astro/__package__.yaml
+++ b/docstrings/astro/__package__.yaml
@@ -1,4 +1,9 @@
-description: "Provides diverse low-level to support  astrodynamics calculations. This module can be used as standalone together with the math moduke. The other modules make extensive use of the functionality exposed here"
+summary : "Fundamental astrodynamics calculations."
+
+extended_summary:  |
+  Provides diverse low-level to support astrodynamics calculations.
+  This module can be used as standalone together with the math module.
+  The other modules make extensive use of the functionality exposed here.
 
 modules:
   - frame_conversion
