--- a/docstrings/astro/element_conversion.yaml
+++ b/docstrings/astro/element_conversion.yaml
@@ -1,5 +1,11 @@
-description: "This module provide a variety of functions and classes to convert between different representations of translational and rotational states (e.g. Cartesian <-> Keplerian). Note that rotations between different reference frames are provided in the frame_conversion module"
-notes: "None"
+summary: "Functions for converting between sets of orbital elements."
+
+extended_summary: |
+  This module provide a variety of functions and classes to
+  convert between different representations of translational and
+  rotational states (e.g. Cartesian <-> Keplerian). Note that rotations
+  between different reference frames are provided in the
+  :ref:`\`\`frame_conversion\`\`` module.
 
 classes:
 
